<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/op01"
                android:icon="@drawable/cuenta_box"
                android:title="@string/datosPersonales" />
            <item
                android:id="@+id/op02"
                android:icon="@drawable/agendar_cita"
                android:title="@string/agendarCita" />
            <item
                android:id="@+id/op03"
                android:icon="@drawable/evalua_tu_salud"
                android:title="@string/evaluaTuSalud" />
            <item
                android:id="@+id/op04"
                android:icon="@drawable/centros_salud"
                android:title="@string/centrosDeSalud" />
            <item
                android:id="@+id/op05"
                android:icon="@drawable/blog"
                android:title="@string/blog" />
        </menu>
    </item>
    <item android:title="Opciones">
        <menu>
            <item
                android:id="@+id/op06"
                android:icon="@drawable/cerrar_sesion"
                android:title="@string/cerrarSesion" />
        </menu>
    </item>

</menu>