<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoapp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="260dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/btningresar1"
        app:layout_constraintTop_toBottomOf="@+id/textiniciarsesion" />

    <EditText
        android:id="@+id/clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="260dp"
        android:ems="10"
        android:hint="@string/clave"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/btningresar1"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <Button
        android:id="@+id/btningresar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="300dp"
        android:height="50dp"
        android:onClick="iniciarSesion"
        android:text="@string/btnIngresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbrecuerdame" />

    <CheckBox
        android:id="@+id/cbrecuerdame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cbRecuerdame"
        app:layout_constraintEnd_toEndOf="@+id/clave"
        app:layout_constraintTop_toBottomOf="@+id/clave" />

    <TextView
        android:id="@+id/textiniciarsesion"
        android:layout_width="199dp"
        android:layout_height="46dp"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:text="@string/iniciarSesion"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoapp" />

    <Button
        android:id="@+id/textregistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="300dp"
        android:height="50dp"
        android:onClick="crearCuenta"
        android:text="@string/textRegistrar"
        app:layout_constraintStart_toStartOf="@+id/btningresar1"
        app:layout_constraintTop_toBottomOf="@+id/btningresar1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="33dp"
        android:layout_height="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/correo"
        app:layout_constraintStart_toStartOf="@+id/btningresar1"
        app:layout_constraintTop_toTopOf="@+id/correo"
        app:srcCompat="@drawable/cuenta_box" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/clave"
        app:layout_constraintStart_toStartOf="@+id/btningresar1"
        app:layout_constraintTop_toTopOf="@+id/clave"
        app:srcCompat="@drawable/icono_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>