<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarCuenta">

    <EditText
        android:id="@+id/textv1"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="30dp"
        android:background="#E4E4E4"
        android:ems="10"
        android:hint="@string/nombreUsuario"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textv5" />

    <EditText
        android:id="@+id/textv2"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="30dp"
        android:background="#E4E4E4"
        android:ems="10"
        android:hint="@string/apellidoUsuario"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textv3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textv1" />

    <EditText
        android:id="@+id/textv3"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="30dp"
        android:background="#E4E4E4"
        android:ems="10"
        android:hint="@string/sexoUsuario"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textv4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textv2" />

    <EditText
        android:id="@+id/textv4"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="74dp"
        android:background="#E4E4E4"
        android:ems="10"
        android:hint="@string/fNacUsuario"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btncrearcuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textv3" />

    <TextView
        android:id="@+id/textv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="81dp"
        android:text="Registro"
        android:textColor="@color/indigo_500"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btncrearcuenta"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="128dp"
        android:height="50dp"
        android:onClick="enviarDetalles"
        android:text="@string/btnContinuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textv4" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="Datos personales"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textv1"
        app:layout_constraintStart_toStartOf="@+id/textv1" />

</androidx.constraintlayout.widget.ConstraintLayout>